# panther_analysis_tool

./: .gitignore  .panther_settings.yml  GENERATE_API_PLAN.md  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  dev-requirements.txt  example_panther_config.yml  pyproject.toml  requirements-top-level.txt  requirements.txt  setup.cfg  setup.py  testing.py
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  story.md
.github/scripts/lint-invisible-characters/: lint-invisible-characters.py
.github/workflows/: asana.yml  ci.yml  fmt.yml  invisible-characters.yml  release.yml  release_pr.yml  release_publish.yml  test_release_publish.yml  update-schemas.yml  update_panther_analysis_dependency.yml  version_bump_pr.yml
panther_analysis_tool/: __init__.py  analysis_utils.py  cli_output.py  constants.py  data_model.py  destination.py  detection.py  directory.py  enriched_event.py  enriched_event_generator.py  errors.py  event_input.py  exceptions.py  generate_schemas.py  helpers.py  immutable.py  log_type_validator.py  main.py  output.py  outputlib.py  policy.py  rule.py  schemaRegexs.py  schema_regexs.py  schemas.py  test_case.py  test_data_enricher.py  testing.py  util.py  validation.py  version.py  zip_chunker.py
panther_analysis_tool.egg-info/: SOURCES.txt  requires.txt  top_level.txt
panther_analysis_tool/api/: __init__.py  base.py  items.py  loader.py  severity.py  writer.py
panther_analysis_tool/backend/: base.py  client.py  errors.py  lambda.py  lambda_client.py  mocks.py  params.py  public_api.py  public_api_client.py  rest_client.py
panther_analysis_tool/backend/graphql/: async_bulk_upload.graphql  async_bulk_upload_status.graphql  bulk_upload.graphql  create_or_update_schema.graphql  create_perf_test.graphql  delete_detections.graphql  delete_global_helpers.graphql  delete_saved_queries.graphql  execute_data_lake_query.graphql  feature_flags.graphql  generate_enriched_event.graphql  get_data_lake_query.graphql  get_rule_body.graphql  get_version.graphql  list_schemas.graphql  metrics.graphql  replay.graphql  sdk_upload.graphql  stop_replay.graphql  test_correlation_rule.graphql  transpile_filters.graphql  transpile_sdl.graphql  validate_bulk_upload.graphql  validate_bulk_upload_status.graphql
panther_analysis_tool/cmd/: __init__.py  bulk_delete.py  check_connection.py  config_utils.py  configsdk_test.py  configsdk_upload.py  panthersdk_test.py  panthersdk_upload.py  panthersdk_utils.py  standard_args.py  validate.py
panther_analysis_tool/command/: benchmark.py  bulk_delete.py  bulk_upload.py  check_connection.py  clone.py  enable.py  explore.py  fake_customer_files.py  fetch.py  fmt.py  gedit.py  generate.py  init_project.py  install.py  maxpoc_deploy.py  merge.py  migrate.py  obfuscate.py  panthersdk_test.py  panthersdk_upload.py  poc_yaml_resolver.py  pull.py  rev.py  standard_args.py  update.py  upload_sync.py  validate.py  validate_sql.py
panther_analysis_tool/config/: base.py  default.py
panther_analysis_tool/core/: analysis_cache.py  clone_item.py  definitions.py  diff.py  editor.py  file_editor.py  format.py  git.py  git_helpers.py  install_item.py  merge_item.py  migration.py  parse.py  root.py  versions_file.py  yaml.py  yaml_formatter.py
panther_analysis_tool/detection_schemas/: README.md  analysis_config_schema.json  correlation_rule.json  data_model.json  derived.json  global.json  lookup_table.json  pack.json  policy.json  rule.json  saved_query.json  scheduled_query.json  simple_detection_json_schema.json
panther_analysis_tool/gui/: app.py  explore.tcss  explore_gui.py  explore_gui.tcss  widgets.py  yaml_conflict_resolver_gui.py  yaml_conflict_resolver_gui.tcss
panther_analysis_tool/libs/: analysis_cache.py  definitions.py  parse.py
panther_analysis_tool/log_schemas/: user_defined.py
panther_analysis_tool/lookup_tables/: lookup_table.py
panther_analysis_tool/panthersdk/: __init__.py  models.py  utils.py
panther_analysis_tool/patterns/: default_patterns.json
panther_analysis_tool/schemas/: schemas.py
panther_analysis_tool/src/: main.py
panther_cli.egg-info/: PKG-INFO
tests/: conftest.py
tests/fixtures/: aws_globals.yml  example_data_model_conflict.yml  example_malformed_policy.yml  example_malformed_yaml.yml  example_policy.json  example_policy.yml  example_policy_bad_resource_type.yml  example_policy_import.yml  example_policy_invalid_characters.yml  example_policy_missing_policy_file.yml  example_policy_required_tests.yml  example_rule.py  example_rule_bad_log_type.yml  example_rule_invalid_mocks.py  example_rule_invalid_mocks.yml  example_rule_invalid_test.py  example_rule_invalid_test.yml  example_rule_missing_field.yml  example_set_duplicates.yml  example_unhandled_exception.py  example_unhandled_exception.yml
tests/fixtures/derived_without_base/: derived.yml
tests/fixtures/detections/: .panther_settings.yml  aws_globals.yml  example_ignored.yml  example_ignored_multi.yml  example_invalid_pack.yml  example_policy.py  example_policy.yml  example_policy_bad_resource_type.py  example_policy_import.py  example_policy_set_duplicates.yml  example_rule.py  example_rule_invalid_mocks.py  example_rule_invalid_mocks.yml  example_rule_invalid_test.py  example_rule_missing_field.yml  example_rule_set_duplicates.yml  example_set_duplicates.yml  example_strict_invalid_yaml.yml  example_unhandled_exception.py  example_unhandled_exception_on_import.py
tests/fixtures/inline-filters/: basic.python.rule.with.filters.py  basic.python.rule.with.filters.yml  basic.python.rule.yml  basic.python.scheduled_rule.yml  basic.rule.with.filters.yml  basic.rule.yml  basic.scheduled_rule.yml
tests/fixtures/python_merge_conflict/: base_python.py  customer_python.py  panther_python.py
tests/fixtures/queries/: example-scheduled-query.yml
tests/scripts/: delete_cached_analysis_item.py  insert_cached_analysis_item.py  open_merge_conflict_in_editor.py  revise_cached_analysis_item.py  run_yaml_merge_conflict_resolver.py
tests/utils/: get_specs_for_test.py
(+287 files in other folders)
